# train-svm-cpp

./: CMakeLists.txt  Makefile  README.md  run  svm_train
src/: main.cpp
